[package]
name = "o2cloud-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for O2 Cloud (Telefónica España) — manage your cloud storage from the terminal"
license = "MIT"
repository = "https://github.com/danielperez9430/o2cloud-cli"
readme = "README.md"

[[bin]]
name = "o2cloud"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls", "gzip", "brotli", "deflate"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
wry = "0.55"
winit = "0.30"
url = "2"
thiserror = "2"
dirs = "6"
base64 = "0.22"
bytes = "1"
zip = "2"
